--- a/ADETQ3_JOHNDEILBERNARD_BASILAN/WebApplication1/Views/Home/About.cshtml
+++ b/ADETQ3_JOHNDEILBERNARD_BASILAN/WebApplication1/Views/Home/About.cshtml
@@ -8,5 +8,6 @@
         Course:       BSIT<br />
         Age:          21<br />
         Address:      190-A J Climaco Street, San Vicente, San Pedro Laguna
+        Thann
     </font>
 }
